# IndustriaX

./: .gitignore  pyproject.toml
deploy/: .env.example  Dockerfile.mcp  Dockerfile.postgres  OFFLINE.md  docker-compose.yml
deploy/init/: age.sql
docs/: IndustriaX_Architecture_A.md  IndustriaX_PRD_v1.md  IndustrialX_Architecture_A.md
docs/superpowers/plans/: 2026-06-23-p0-infra-and-mcp-contract.md  2026-06-27-p1-data-layer-and-tagging.md
docs/superpowers/specs/: 2026-06-23-industriax-platform-design.md
industriax/contracts/: meta.py  tools.py
industriax/mcp/: base.py  doc_server.py  graph_server.py  memory_server.py  skill_tools_server.py
scripts/: offline_bundle.sh  smoke_health.sh
tests/: test_smoke.py
tests/contracts/: test_meta.py  test_tools.py
tests/deploy/: test_compose_config.py  test_offline_manifest.py
tests/mcp/: test_servers.py
