[project]
name = "industriax"
version = "0.0.1"
description = "IndustriaX — 工业 AI 生产底座"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.7", "mcp>=1.2"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
